fixed card titles overflow and added ionicons as dependency

--- a/src/webapp/src/app/features/main/class/class.component.scss
+++ b/src/webapp/src/app/features/main/class/class.component.scss
@@ -129,6 +129,10 @@ ion-card {
   color: rgba(var(--ion-color-text-rgb), 0.8);
 }
 
+div.input-wrapper {
+  flex-direction: column !important;
+}
+
 .account {
   display: flex;
   width: 100%;
